<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    >


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".screens.Refine">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_availability"
            android:textColor="@color/primaryTextColor"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:boxStrokeWidth="0.5dp"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            style="@style/EditTextInputLayout"
            >
            <AutoCompleteTextView
                android:id="@+id/availability_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:padding="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_your_status"
            android:textColor="@color/primaryTextColor"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:paddingTop="2dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textCursorDrawable="@drawable/textcursordrawable"
            android:paddingBottom="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittextoutline"
            android:text="@string/welcome_"
            style="@style/textInputEditTextCustom"
            android:textColor="@color/tertiaryColor"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_hyper_local_distance"
            android:textColor="@color/primaryTextColor"
            />
        <com.google.android.material.slider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbColor="@color/primaryTextColor"
            app:thumbStrokeColor="@color/primaryTextColor"
            app:thumbStrokeWidth="2dp"
            app:labelStyle="@style/toolTips"
            app:trackColorActive="@color/primaryTextColor"
            app:trackColorInactive="@color/hint_text_color_dark_ui"
            android:id="@+id/slider"
            app:trackHeight="2dp"
            app:labelBehavior="visible"
            android:stepSize="1"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            android:value="7"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_pupose"
            android:textColor="@color/primaryTextColor"
            />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:singleLine="false"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="8dp"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coffee"
                android:checked="true"
                style="@style/customChipStyle"
                 />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Business"
                android:checked="true"
                style="@style/customChipStyle"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hobbies"
                style="@style/customChipStyle"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Friendship"
                style="@style/customChipStyle"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Movies"
                style="@style/customChipStyle"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dinning"
                android:checked="true"
                style="@style/customChipStyle"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dating"
                style="@style/customChipStyle"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Matrimoney"
                style="@style/customChipStyle"
                />


        </com.google.android.material.chip.ChipGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>