<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/rl_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_invite"
                    android:fontFamily="@font/lato_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12sp"
                    android:text="@string/tv_invite"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="74dp"
                    android:layout_below="@id/tv_invite"
                    android:fontFamily="@font/lato_bold"
                    android:text="Coffee | Business | Friendship | Hobbies"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_tags"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/user_about_desc"
                    android:textColor="@color/hint_text_color_dark_ui"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".56" />

        <RelativeLayout
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:elevation="8dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_photo_card"
                android:layout_width="64dp"
                android:layout_height="76dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="8dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/user_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_rohit" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/user_photo_card"


                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24sp"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@id/user_photo_card"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/usr_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_medium"
                    />

                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_user_name"
                    android:layout_marginStart="24sp"
                    android:fontFamily="@font/lato"
                    android:layout_toEndOf="@id/user_photo_card"
                    android:text="@string/usr_location_details"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/text_size_small"
                     />
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    style="@style/MyProgressBar"
                    android:indeterminate="false"
                    android:max="100"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="24dp"
                    android:progress="50" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>